# dig-slashing

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.config/: nextest.toml
.github/workflows/: ci.yml  (+1 more)
src/: bonds.rs  constants.rs  error.rs  lib.rs  manager.rs  orchestration.rs  pending.rs  protection.rs  system.rs  traits.rs
tests/: dsl_001_offense_type_bps_mapping_test.rs  dsl_002_evidence_hash_determinism_test.rs  dsl_003_checkpoint_roundtrip_test.rs  dsl_004_attestation_data_signing_root_test.rs  dsl_005_indexed_attestation_validate_structure_test.rs  dsl_006_indexed_attestation_verify_signature_test.rs  dsl_007_attester_slashing_slashable_indices_test.rs  dsl_008_invalid_block_proof_roundtrip_test.rs  dsl_009_signed_block_header_roundtrip_test.rs  dsl_010_slashable_validators_list_test.rs  dsl_011_verify_evidence_offense_too_old_test.rs  dsl_012_verify_evidence_reporter_is_accused_test.rs  dsl_013_verify_proposer_slashing_preconditions_test.rs  dsl_014_verify_attester_double_vote_predicate_test.rs  dsl_015_verify_attester_surround_vote_predicate_test.rs  dsl_016_verify_attester_empty_intersection_test.rs  dsl_017_verify_attester_not_slashable_test.rs  dsl_018_verify_invalid_block_signature_over_domain_test.rs  dsl_019_verify_invalid_block_epoch_mismatch_test.rs  dsl_020_verify_invalid_block_oracle_called_test.rs  dsl_021_verify_evidence_for_inclusion_parity_test.rs  dsl_022_submit_evidence_base_slash_formula_test.rs  dsl_023_submit_evidence_escrows_reporter_bond_test.rs  dsl_024_submit_evidence_creates_pending_accepted_test.rs  dsl_025_submit_evidence_proposer_unavailable_atomicity_test.rs  dsl_025_submit_evidence_reward_routing_test.rs  dsl_025_submit_evidence_validator_not_registered_atomicity_test.rs  dsl_026_submit_evidence_already_slashed_test.rs  dsl_027_submit_evidence_book_full_test.rs  dsl_028_submit_evidence_bond_lock_failed_test.rs  dsl_029_finalise_transitions_to_finalised_test.rs  dsl_030_finalise_applies_correlation_penalty_test.rs  dsl_031_finalise_returns_reporter_bond_test.rs  dsl_032_finalise_schedules_exit_lock_test.rs  dsl_033_finalise_skips_reverted_test.rs  dsl_034_proposer_appeal_headers_identical_sustained_test.rs  (+138 more)
(+257 files in other folders)
