[package]
name = "dig-slashing"
version = "0.1.0"
edition = "2024"
description = "Validator slashing, attestation participation, inactivity accounting, and fraud-proof appeals for the DIG Network L2 blockchain."
license = "Apache-2.0"
repository = "https://github.com/DIG-Network/dig-slashing"
homepage = "https://github.com/DIG-Network/dig-slashing"
documentation = "https://docs.rs/dig-slashing"
readme = "README.md"
keywords = ["blockchain", "slashing", "validator", "consensus", "dig-network"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
# dig-protocol re-exports Bytes32 / Bytes48 / Bytes96 / Coin / CoinSpend /
# SpendBundle from chia-protocol plus DIG L2 extensions. We enable the
# chia-protocol serde feature transitively via `chia-protocol` with
# `serde` so Bytes32 derives Deserialize/Serialize.
bincode = "1.3"
chia-bls = "0.26"
chia-protocol = { version = "0.26", features = ["serde"] }
chia-sha2 = "0.26"
clvm-utils = "0.26"
clvmr = "0.14"
dig-block = "0.1"
dig-epoch = "0.1"
dig-protocol = "0.1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
thiserror = "2"

[dev-dependencies]
chia-sdk-types = "0.30"
chia-sha2 = "0.26"
clvm-traits = "0.26"
serde_json = "1"

